--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "typeinfo": "cpp",
         "string": "cpp",
         "algorithm": "cpp",
-        "*.trm": "cpp"
+        "*.trm": "cpp",
+        "*.inc": "cpp"
     }
 }
