Improved distributed monitoring.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "string": "cpp",
         "algorithm": "cpp",
         "*.trm": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
