--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,8 @@
         "__tree": "cpp",
         "__tuple": "cpp",
         "__functional_03": "cpp",
-        "ciso646": "cpp"
+        "ciso646": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
     }
 }
